# tRust

./: Cargo.toml  README.md  main.rs
src/: bencode.rs  construct_url.rs  main.rs
