[package]
name = "rust_torrent"
version = "0.1.0"
authors = ["pj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
bip_bencode = "0.4.4"
url = "2.2.1" 
rust-crypto = "^0.2"
rand = "0.8.3"
itertools = "0.10.0"

[[bin]]
name = "rust_torrent"
path = "src/main.rs"
